--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -18,7 +18,7 @@
       "build_entry_point": "op"
     }
   ],
-  "need_preview_pull_request",
+  "need_preview_pull_request": true,
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
