--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -21,6 +21,6 @@
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
-  "need_preview_pull_request": true,
+  "need_preview_pull_request": false,
   "dependent_repositories": []
 }
